[~] Updated title && description

--- a/www/index.html
+++ b/www/index.html
@@ -2,11 +2,11 @@
     <head>
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <link rel="stylesheet" type="text/css" href="css/styless.css">
-        <title>Hello World</title>
+        <title>Antoine's Counter App</title>
         <!--
         Name: Antoine FORET
         Student number: 1801692
-        App Description: Antoine's Counter App
+        App Description: A simple Apache Cordova App: Click Counter with GitRepository
         -->
     </head>
     <body>
