[+] Added Login page

--- a/www/index.html
+++ b/www/index.html
@@ -9,9 +9,8 @@
         <link rel="stylesheet" type="text/css" href="css/index.css">
         <title>Apache Cordova</title>
     </head>
-    <body>
-
-
+    <body class="grey-100">
+        <div id="page"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="mobileui/mobileui.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
