[+] Added Tab page

--- a/www/home.html
+++ b/www/home.html
@@ -1,3 +1,70 @@
-<div class="page">
-    HOMEPAGE
+<div class="page grey-100 has-header has-sub-header">
+    <div class="header blue sub shadow tab">
+        <button class="icon ion-android-person active" onclick="openTab('tabWelcome')">Welcome</button>
+        <button class="icon ion-android-home" onclick="openTab('tabHome')">Home</button>
+        <button class="icon ion-information-circled" onclick="openTab('tabAbout')">About</button>
+    </div>
+    <div class="tab-content active padding" id="tabWelcome">
+        <div class="padding border-grey-400 shadow radius white">
+            <p class="text-black-30 align-center text-strong title">Welcome</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin auctor ante nec enim interdum, non maximus urna iaculis. Phasellus auctor ligula vitae lorem lacinia, id blandit mi egestas. Aliquam nunc tortor, pellentesque vestibulum dui in, cursus efficitur justo. Etiam in ornare justo, sed ultrices enim. Curabitur porta neque eget faucibus malesuada. Proin quis rhoncus nulla. Donec sit amet pharetra lorem, id sodales diam. Nunc sit amet sem nec lacus euismod aliquam. Nunc iaculis mauris ac nunc pellentesque, vel congue libero blandit. Nulla laoreet, eros vitae euismod dapibus, mi magna fringilla mauris, at feugiat lacus leo at quam. Proin sit amet risus eget arcu eleifend interdum. Etiam volutpat turpis ut nibh cursus, sit amet lacinia erat aliquam.</p>
+            <p>Proin auctor turpis quis sagittis consequat. Duis vel turpis eu risus egestas tincidunt ut eu neque. Donec tincidunt orci imperdiet maximus euismod. Curabitur gravida maximus ligula sed pulvinar. Suspendisse tempor urna non enim pharetra, vitae hendrerit lacus fringilla. Sed aliquam enim orci, at bibendum est laoreet ut. Proin urna massa, fringilla vitae augue non, accumsan elementum erat.</p>
+            <p>Sed tempor risus sed dui ultricies, vel finibus felis malesuada. Mauris tempus massa est, et ultricies justo scelerisque id. Sed ultricies mollis ullamcorper. Sed at felis vitae risus fringilla accumsan. Fusce sodales neque sed mollis pharetra. Pellentesque faucibus enim orci, eget pretium diam rhoncus quis. Cras et lorem dapibus, eleifend nisi id, porttitor sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse potenti. Quisque libero quam, pellentesque vel justo at, rutrum laoreet ipsum.</p>
+            <p>Donec interdum vitae orci feugiat tempor. Pellentesque vehicula diam elit, ut facilisis nisi porta sit amet. Donec ac tellus mauris. Cras libero lorem, pharetra eget rutrum vel, elementum consectetur nunc. Pellentesque ut diam leo. In non magna quis lectus elementum porttitor nec eu turpis. Sed dignissim accumsan urna, sed lobortis ligula. Phasellus a interdum purus, a faucibus nisl. Maecenas porta gravida purus, ac tempus neque dictum sed. Fusce at auctor orci, vitae tempus sem. Vestibulum ut quam quam. Nam finibus auctor dui, a molestie arcu pharetra non.</p>
+            <p>Aenean ultrices a velit sagittis luctus. Mauris feugiat, libero eu suscipit maximus, lacus odio feugiat erat, at aliquet dui lectus nec neque. Integer quis elementum lorem, ac molestie nisl. Donec in mattis magna. Donec at elit justo. Phasellus id luctus diam. In sit amet purus lobortis, aliquet sem eget, condimentum felis. Suspendisse ac justo ac metus euismod mollis. Pellentesque interdum eros eu justo aliquet, ut fermentum arcu rhoncus. Integer elit neque, mattis in ornare at, placerat in urna. Aenean bibendum eleifend scelerisque. Aenean sit amet posuere tellus. Vestibulum ligula odio, tincidunt vel magna sit amet, tempor feugiat eros.</p>
+            <div class="space"></div>
+            <div class="item">
+                <button class="green radius full" onclick="openTab('tabHome')">Go to Home</button>
+            </div>
+        </div>
+    </div>
+    <div class="tab-content padding" id="tabHome">
+        <div class="padding border-grey-400 shadow radius white">
+            <p class="text-black-30 align-center text-strong title">Home</p>
+            <div class="item row">
+                <p class="col-80">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus, quam et tempus facilisis, neque lorem suscipit ante, nec maximus libero est vel mi. Nam ligula massa, dapibus at risus at, faucibus tempor nisi. Sed neque urna, ullamcorper non vulputate dapibus, consectetur pulvinar lorem. Mauris dignissim, arcu ut vestibulum porttitor, odio urna faucibus nulla, a posuere tortor eros et magna. Pellentesque mattis sed neque non commodo. Aliquam quis tempus quam. Curabitur hendrerit mauris sed mi faucibus, eget viverra massa sodales. Quisque massa erat, sagittis vitae nibh at, congue pulvinar sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur luctus sodales sem ac bibendum. Sed ipsum sem, tristique ac facilisis sit amet, pharetra eget dui. In a urna nunc.</p>
+                <img src="http://lorempicsum.com/futurama/300/200/1" class="right col-20" />
+            </div>
+            <p>Quisque ultrices condimentum nulla vel laoreet. Quisque sollicitudin augue leo, in viverra leo dictum gravida. Fusce egestas gravida posuere. Sed et sem eu diam elementum rutrum. Mauris vel nulla cursus, blandit metus quis, tincidunt lectus. Quisque pulvinar sagittis ipsum in sollicitudin. Donec porta quis dolor sed porttitor. Curabitur tincidunt feugiat lacus, tristique iaculis justo sollicitudin vitae. Nunc a sapien eget turpis interdum luctus. Sed ut turpis ac urna fringilla auctor. Quisque in tincidunt lorem. Maecenas varius orci erat, eget condimentum sapien ultrices et. Quisque tincidunt accumsan eros non congue. Donec imperdiet ipsum a nunc tristique condimentum. Donec urna ante, mattis sit amet elit in, mollis efficitur ex.</p>
+            <p>Donec viverra massa quis sapien dictum, vel dictum neque ultrices. Donec mollis dictum dapibus. Suspendisse tempus blandit quam nec suscipit. Mauris suscipit et lectus et fermentum. Suspendisse nec rhoncus diam. Nulla facilisi. Ut blandit, ligula quis malesuada consectetur, odio ex ullamcorper tortor, in aliquet sem nisi quis velit. Nunc ante arcu, pellentesque id rutrum eget, sollicitudin ut ipsum. Pellentesque luctus diam in erat tristique aliquet. Praesent vitae felis sed metus efficitur congue in eget mi. Fusce tincidunt purus nunc, vitae maximus tortor interdum id. Quisque vehicula nunc lorem, id lobortis erat laoreet vel. Donec ultricies aliquet pretium. Phasellus nec lectus ante. Mauris et sem est.</p>
+        </div>
+    </div>
+    <div class="tab-content padding" id="tabAbout">
+        <div class="padding border-grey-400 shadow radius white">
+            <p class="text-black-30 align-center text-strong title">About</p>
+            <div class="list">
+                <div class="item">
+                    <div class="left">
+                        <div class="icon-circle text-red border-red">
+                            <i class="icon ion-information"></i>
+                        </div>
+                    </div>
+                    <h2>Description</h2>
+                    <p class="text-grey-500">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dapibus, quam et tempus facilisis, neque lorem suscipit ante, nec maximus libero est vel mi. Nam ligula massa, dapibus at risus at, faucibus tempor nisi. Sed neque urna, ullamcorper non vulputate dapibus, consectetur pulvinar lorem. Mauris dignissim, arcu ut vestibulum porttitor, odio urna faucibus nulla, a posuere tortor eros et magna. Pellentesque mattis sed neque non commodo. Aliquam quis tempus quam. Curabitur hendrerit mauris sed mi faucibus, eget viverra massa sodales. Quisque massa erat, sagittis vitae nibh at, congue pulvinar sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Curabitur luctus sodales sem ac bibendum. Sed ipsum sem, tristique ac facilisis sit amet, pharetra eget dui. In a urna nunc.</p>
+                </div>
+                <div class="item">
+                    <div class="left">
+                        <div class="icon-circle text-red border-red">
+                            <i class="icon ion-email"></i>
+                        </div>
+                    </div>
+                    <h2>Email</h2>
+                    <p class="text-grey-500">admin6@toto.fr</p>
+                </div>
+                <div class="item">
+                    <div class="left">
+                        <div class="icon-circle text-red border-red">
+                            <i class="icon ion-iphone"></i>
+                        </div>
+                    </div>
+                    <h2>Phone</h2>
+                    <p class="text-grey-500">06 01 23 45 67 </p>
+                </div>
+            </div>
+            <div class="space"></div>
+            <div class="item">
+                <button class="green radius full">Contact</button>
+            </div>
+        </div>
+    </div>
 </div>
