--- a/www/index.html
+++ b/www/index.html
@@ -17,6 +17,7 @@
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
+        <script type="text/javascript" src="js/databaseHandler.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
