[+] Added add page

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,38 @@
         <title>Apache Cordova</title>
     </head>
     <body>
-
+        <div data-role="page" id="addpage">
+            <div data-role="panel" id="addPagePanel">
+                <h1>Menu</h1>
+                <ul data-role="listview" data-inset="true">
+                    <li data-role="list-divider">Accounts</li>
+                    <li data-icon="plus"><a href="#addpage">Add</a></li>
+                    <li data-icon="grid"><a href="#loadpage">Load</a></li>
+                </ul>
+            </div>
+            <div data-role="header" data-position="fixed">
+                <a href="#addPagePanel"
+                   class="ui-btn ui-icon-bars ui-btn-icon-notext ui-corner-all uishadow"></a>
+                <h1>Add account</h1>
+            </div>
+            <div data-role="main" class="ui-content">
+                <form>
+                    <div class="ui-field-contain">
+                        <label for="id">ID:</label>
+                        <input type="number" id="id" data-clear-btn="true" />
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" data-clear-btn="true" />
+                        <label for="password">Password:</label>
+                        <input type="password" id="password" data-clear-btn="true" />
+                        <label for="passwordConfirm">Password confirmation:</label>
+                        <input type="password" id="passwordConfirm" data-clear-btn="true" />
+                        <label for="btnAdd"></label>
+                        <a class="ui-btn ui-icon-plus ui-btn-icon-left"
+                           id="btnAdd" onclick="addAccount()">Add</a>
+                    </div>
+                </form>
+            </div>
+        </div>
         <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
